--- a/bonus.html
+++ b/bonus.html
@@ -3,7 +3,26 @@
 
 <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <title>National casino</title>
+
+    <meta name="description" content="" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta http-equiv="x-ua-compatible" content="IE=edge" />
+    <meta property="og:site_name" content="" />
+    <meta property="og:title" content="" />
+    <meta property="og:description" content="" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="" />
+    <meta property="og:image" content="" />
+    <meta property="og:image:alt" content="" />
+    <meta property="og:locale" content="" />
+
+    <link rel="apple-touch-icon" sizes="180x180" href="./images/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./images/favicon/favicon-16x16.png">
+    <link rel="manifest" href="./images/favicon/site.webmanifest">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -17,14 +36,13 @@
     <link rel="stylesheet" href="./css/main.css">
     <link rel="stylesheet" href="./css/media.css">
 
-    <title>National casino</title>
-    <script type="module" src="./index.js"></script>
+    <script defer src="./index.js"></script>
 </head>
 
 <body>
     <header class="cover header">
         <a href="./index.html" class="logo header__logo">
-            <img src="./images/logo.png" alt="logo">
+            <img src="./images/logo.png" alt="logo" title="">
         </a>
         <nav class="header__menu">
             <ul>
@@ -45,16 +63,16 @@
         </ul>
 
         <div class="header__language">
-            <img src="./images/flag-canada.png" alt="canada flag">
+            <img src="./images/flag-canada.png" alt="canada flag" title="">
         </div>
 
         <button type="button" class="header__menu-open" data-menu-open>
-            <img src="./images/menu-bar.png" alt="menu button">
+            <img src="./images/menu-bar.png" alt="menu button" title="">
         </button>
 
         <div class="mob-menu is-hidden" data-menu>
             <button type="button" class="header__menu-close" data-menu-close>
-                <img src="./images/close-icon.png" alt="close">
+                <img src="./images/close-icon.png" alt="close" title="">
             </button>
 
             <nav class="header__menu mob-menu__nav">
@@ -80,21 +98,21 @@
     <main class="main">
         <section class="cover bonus-prime">
             <div class="background bonus-prime__background">
-                <img src="./images/bonus/vip-bg.png" alt="background">
+                <img src="./images/bonus/vip-bg.png" alt="background" title="">
             </div>
 
             <div class="image bonus-prime__image">
-                <img src="./images/bonus/vip-image-left.png" alt="background">
-                <img src="./images/bonus/vip-image-right.png" alt="background">
+                <img src="./images/bonus/vip-image-left.png" alt="background" title="">
+                <img src="./images/bonus/vip-image-right.png" alt="background" title="">
             </div>
 
             <div class="prime__wrap bonus-prime__content">
                 <p class="prime__nav"><a href="./index.html">Home</a> | <a>Bonuses</a></p>
 
                 <div class="title-wrap bonus-prime__title-wrap">
-                    <img src="./images/prime-content-left.png" alt="marker">
+                    <img src="./images/prime-content-left.png" alt="marker" title="">
                     <h2 class="title prime__subtitle app-prime__subtitle">Live games</h2>
-                    <img src="./images/prime-content-right.png" alt="marker">
+                    <img src="./images/prime-content-right.png" alt="marker" title="">
                 </div>
 
                 <h1 class="title general prime__title bonus-prime__title">Lorem <span>ipsum dolor</span> <br> sit amet,
@@ -107,9 +125,9 @@
 
         <section class="content welcome__content">
             <div class="title-wrap welcome__title-wrap">
-                <img src="./images/title-marker-left.png" alt="marker">
+                <img src="./images/title-marker-left.png" alt="marker" title="">
                 <h2 class="title welcome__title">Bizzo bookmaker company - online betting</h2>
-                <img src="./images/title-marker-right.png" alt="marker">
+                <img src="./images/title-marker-right.png" alt="marker" title="">
             </div>
             <p class="welcome__desc">22BET is an online bookmaker that offers simple registration and a wide selection
                 of payment methods,
@@ -123,14 +141,14 @@
             <ul class="welcome__bonus-list">
                 <li>
                     <div class="background">
-                        <img src="./images/bonus/bonus-list-bg-1.png" alt="background">
+                        <img src="./images/bonus/bonus-list-bg-1.png" alt="background" title="">
                     </div>
                     <div class="image welcome__bonus-wrap">
-                        <img src="./images/bonus/bonus-list-image-1.png" alt="image">
+                        <img src="./images/bonus/bonus-list-image-1.png" alt="image" title="">
                     </div>
 
                     <div class="welcome__bonus-content">
-                        <img src="./images/bonus/polygon.png" alt="icon">
+                        <img src="./images/bonus/polygon.png" alt="icon" title="">
 
                         <h3 class="welcome__bonus-subtitle">Lorem ipsum dolor</h3>
                         <h2 class="welcome__bonus-title">50% up to €/$ 200</h2>
@@ -145,14 +163,14 @@
 
                 <li>
                     <div class="background">
-                        <img src="./images/bonus/bonus-list-bg-2.png" alt="background">
+                        <img src="./images/bonus/bonus-list-bg-2.png" alt="background" title="">
                     </div>
                     <div class="image welcome__bonus-wrap">
-                        <img src="./images/bonus/bonus-list-image-2.png" alt="image">
+                        <img src="./images/bonus/bonus-list-image-2.png" alt="image" title="">
                     </div>
 
                     <div class="welcome__bonus-content">
-                        <img src="./images/bonus/polygon.png" alt="icon">
+                        <img src="./images/bonus/polygon.png" alt="icon" title="">
 
                         <h3 class="welcome__bonus-subtitle">Lorem ipsum dolor</h3>
                         <h2 class="welcome__bonus-title">50% up to €/$ 200</h2>
@@ -167,14 +185,14 @@
 
                 <li>
                     <div class="background">
-                        <img src="./images/bonus/bonus-list-bg-3.png" alt="background">
+                        <img src="./images/bonus/bonus-list-bg-3.png" alt="background" title="">
                     </div>
                     <div class="image welcome__bonus-wrap">
-                        <img src="./images/bonus/bonus-list-image-3.png" alt="image">
+                        <img src="./images/bonus/bonus-list-image-3.png" alt="image" title="">
                     </div>
 
                     <div class="welcome__bonus-content">
-                        <img src="./images/bonus/polygon.png" alt="icon">
+                        <img src="./images/bonus/polygon.png" alt="icon" title="">
 
                         <h3 class="welcome__bonus-subtitle">Lorem ipsum dolor</h3>
                         <h2 class="welcome__bonus-title">50% up to €/$ 200</h2>
@@ -189,14 +207,14 @@
 
                 <li>
                     <div class="background">
-                        <img src="./images/bonus/bonus-list-bg-4.png" alt="background">
+                        <img src="./images/bonus/bonus-list-bg-4.png" alt="background" title="">
                     </div>
                     <div class="image welcome__bonus-wrap">
-                        <img src="./images/bonus/bonus-list-image-4.png" alt="image">
+                        <img src="./images/bonus/bonus-list-image-4.png" alt="image" title="">
                     </div>
 
                     <div class="welcome__bonus-content">
-                        <img src="./images/bonus/polygon.png" alt="icon">
+                        <img src="./images/bonus/polygon.png" alt="icon" title="">
 
                         <h3 class="welcome__bonus-subtitle">Lorem ipsum dolor</h3>
                         <h2 class="welcome__bonus-title">50% up to €/$ 200</h2>
@@ -213,9 +231,9 @@
 
         <section class="content payment__content">
             <div class="title-wrap payment__title-wrap">
-                <img src="./images/title-marker-left.png" alt="marker">
+                <img src="./images/title-marker-left.png" alt="marker" title="">
                 <h2 class="title payment__title">Deposit and withdrawal options</h2>
-                <img src="./images/title-marker-right.png" alt="marker">
+                <img src="./images/title-marker-right.png" alt="marker" title="">
             </div>
 
             <p class="payment__desc">Online betting allows using different types of payments. With 22BET, you may
@@ -242,9 +260,9 @@
 
         <section class="content faq__content">
             <div class="title-wrap payment__title-wrap">
-                <img src="./images/title-marker-left.png" alt="marker">
+                <img src="./images/title-marker-left.png" alt="marker" title="">
                 <h2 class="title payment__title">FAQ</h2>
-                <img src="./images/title-marker-right.png" alt="marker">
+                <img src="./images/title-marker-right.png" alt="marker" title="">
             </div>
 
             <ul class="faq__list" itemscope itemtype="https://schema.org/FAQPage">
@@ -292,31 +310,31 @@
 
         <ul class="footer__payment">
             <li class="footer__payment-item">
-                <img src="./images/payment/visa.png" alt="visa">
+                <img src="./images/payment/visa.png" alt="visa" title="">
             </li>
             <li class="footer__payment-item">
-                <img src="./images/payment/dinners-discover.png" alt="dinners discover">
+                <img src="./images/payment/dinners-discover.png" alt="dinners discover" title="">
             </li>
             <li class="footer__payment-item">
-                <img src="./images/payment/mastercard.png" alt="mastercard">
+                <img src="./images/payment/mastercard.png" alt="mastercard" title="">
             </li>
             <li class="footer__payment-item">
-                <img src="./images/payment/skrill.png" alt="skrill">
+                <img src="./images/payment/skrill.png" alt="skrill" title="">
             </li>
             <li class="footer__payment-item">
-                <img src="./images/payment/neteller.png" alt="neteller">
+                <img src="./images/payment/neteller.png" alt="neteller" title="">
             </li>
             <li class="footer__payment-item">
-                <img src="./images/payment/ecoPays.png" alt="ecoPays">
+                <img src="./images/payment/ecoPays.png" alt="ecoPays" title="">
             </li>
             <li class="footer__payment-item">
-                <img src="./images/payment/jeton.png" alt="jeton">
+                <img src="./images/payment/jeton.png" alt="jeton" title="">
             </li>
             <li class="footer__payment-item">
-                <img src="./images/payment/interac.png" alt="interac">
+                <img src="./images/payment/interac.png" alt="interac" title="">
             </li>
             <li class="footer__payment-item">
-                <img src="./images/payment/cryptocurrency.png" alt="crypto currency">
+                <img src="./images/payment/cryptocurrency.png" alt="crypto currency" title="">
             </li>
         </ul>
 
@@ -330,7 +348,7 @@
         <p class="footer__desc">Gambling can be addictive. Play responsibly.</p>
 
         <div class="footer__logo">
-            <img src="./images/logo-footer.png" alt="logo">
+            <img src="./images/logo-footer.png" alt="logo" title="">
         </div>
     </footer>
 
