--- a/index.html
+++ b/index.html
@@ -3,7 +3,26 @@
 
 <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <title>National casino</title>
+
+    <meta name="description" content="" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta http-equiv="x-ua-compatible" content="IE=edge" />
+    <meta property="og:site_name" content="" />
+    <meta property="og:title" content="" />
+    <meta property="og:description" content="" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="" />
+    <meta property="og:image" content="" />
+    <meta property="og:image:alt" content="" />
+    <meta property="og:locale" content="" />
+
+    <link rel="apple-touch-icon" sizes="180x180" href="./images/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./images/favicon/favicon-16x16.png">
+    <link rel="manifest" href="./images/favicon/site.webmanifest">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -17,14 +36,13 @@
     <link rel="stylesheet" href="./css/main.css">
     <link rel="stylesheet" href="./css/media.css">
 
-    <title>National casino</title>
     <script type="module" src="./index.js"></script>
 </head>
 
 <body>
     <header class="cover header">
         <a href="./index.html" class="logo header__logo">
-            <img src="./images/logo.png" alt="logo">
+            <img src="./images/logo.png" alt="logo" title="">
         </a>
         <nav class="header__menu">
             <ul>
@@ -45,16 +63,16 @@
         </ul>
 
         <div class="header__language">
-            <img src="./images/flag-canada.png" alt="canada flag">
+            <img src="./images/flag-canada.png" alt="canada flag" title="">
         </div>
 
         <button type="button" class="header__menu-open" data-menu-open>
-            <img src="./images/menu-bar.png" alt="menu button">
+            <img src="./images/menu-bar.png" alt="menu button" title="">
         </button>
 
         <div class="mob-menu is-hidden" data-menu>
             <button type="button" class="header__menu-close" data-menu-close>
-                <img src="./images/close-icon.png" alt="close">
+                <img src="./images/close-icon.png" alt="close" title="">
             </button>
 
             <nav class="header__menu mob-menu__nav">
@@ -80,12 +98,12 @@
     <main class="main">
         <section class="cover prime">
             <div class="background prime__background">
-                <img src="./images/prime/prime-bg.png" alt="background">
+                <img src="./images/prime/prime-bg.png" alt="background" title="">
             </div>
 
             <div class="image prime__image">
-                <img src="./images/prime/hof-banner-image-right.png" alt="background">
-                <img src="./images/prime/tournaments-image-left.png" alt="background">
+                <img src="./images/prime/hof-banner-image-right.png" alt="background" title="">
+                <img src="./images/prime/tournaments-image-left.png" alt="background" title="">
             </div>
 
             <div class="prime__wrap prime__content">
@@ -108,9 +126,9 @@
                 </div>
 
                 <div class="title-wrap prime__title-wrap">
-                    <img src="./images/prime-content-left.png" alt="marker">
+                    <img src="./images/prime-content-left.png" alt="marker" title="">
                     <p class="title prime__subtitle">Live games</p>
-                    <img src="./images/prime-content-right.png" alt="marker">
+                    <img src="./images/prime-content-right.png" alt="marker" title="">
                 </div>
 
                 <h1 class="title general prime__title">Lorem <span>ipsum dolor</span> <br> sit amet, consectetur</h1>
@@ -121,9 +139,9 @@
 
         <section class="content welcome__content">
             <div class="title-wrap welcome__title-wrap">
-                <img src="./images/title-marker-left.png" alt="marker">
+                <img src="./images/title-marker-left.png" alt="marker" title="">
                 <h2 class="title welcome__title">Bizzo bookmaker company - online betting</h2>
-                <img src="./images/title-marker-right.png" alt="marker">
+                <img src="./images/title-marker-right.png" alt="marker" title="">
             </div>
             <p class="welcome__desc">22BET is an online bookmaker that offers simple registration and a wide selection
                 of payment methods,
@@ -135,12 +153,12 @@
 
         <section class="content welcome">
             <div class="background welcome__background">
-                <img src="./images/welcome/games-search-bg.png" alt="background">
+                <img src="./images/welcome/games-search-bg.png" alt="background" title="">
             </div>
 
             <div class="image welcome__image">
-                <img src="./images/welcome/live-image-left.png" alt="girl">
-                <img src="./images/welcome/live-image-right.png" alt="man">
+                <img src="./images/welcome/live-image-left.png" alt="girl" title="">
+                <img src="./images/welcome/live-image-right.png" alt="man" title="">
 
             </div>
 
@@ -148,9 +166,9 @@
                 <h2 class="title general welcome__bonus">Luxury Table Battle</h2>
 
                 <div class="title-wrap welcome__text">
-                    <img src="./images/welcome/welcome-marker-left.png" alt="marker">
+                    <img src="./images/welcome/welcome-marker-left.png" alt="marker" title="">
                     <p>Prize pool</p>
-                    <img src="./images/welcome/welcome-marker-right.png" alt="marker">
+                    <img src="./images/welcome/welcome-marker-right.png" alt="marker" title="">
                 </div>
 
                 <p class="title general welcome__bonus">1000 EUR</p>
@@ -160,9 +178,9 @@
 
         <section class="content how-start__content">
             <div class="title-wrap how-start__title-wrap">
-                <img src="./images/title-marker-left.png" alt="marker">
+                <img src="./images/title-marker-left.png" alt="marker" title="">
                 <h2 class="title how-start__title">Easy and simple start at online betting</h2>
-                <img src="./images/title-marker-right.png" alt="marker">
+                <img src="./images/title-marker-right.png" alt="marker" title="">
             </div>
             <p class="how-start__desc">For players who are interested in online sports betting but have no idea where to
                 start, exploring what
@@ -182,9 +200,9 @@
             </ol>
 
             <div class="title-wrap how-start__title-wrap">
-                <img src="./images/title-marker-left.png" alt="marker">
+                <img src="./images/title-marker-left.png" alt="marker" title="">
                 <h2 class="title how-start__title">Bizzo advantages</h2>
-                <img src="./images/title-marker-right.png" alt="marker">
+                <img src="./images/title-marker-right.png" alt="marker" title="">
             </div>
             <p class="how-start__desc">These are only a small share of what you can expect from 22BET. The license
                 company located in Curacao
@@ -200,29 +218,29 @@
 
         <section class="content facts__content">
             <div class="title-wrap facts__title-wrap">
-                <img src="./images/title-marker-left.png" alt="marker">
+                <img src="./images/title-marker-left.png" alt="marker" title="">
                 <h2 class="title facts__title">Bizzo casino quick facts</h2>
-                <img src="./images/title-marker-right.png" alt="marker">
+                <img src="./images/title-marker-right.png" alt="marker" title="">
             </div>
 
             <ul class="facts__list">
                 <li class="facts__item">
                     <div>
-                        <img src="./images/facts/online-casino-icon.png" alt="icon">
+                        <img src="./images/facts/online-casino-icon.png" alt="icon" title="">
                         <span>Website</span>
                     </div>
                     <div><a href="#">https://bizzocasino.com/</a></div>
                 </li>
                 <li class="facts__item">
                     <div>
-                        <img src="./images/facts/billiard-ball-icon.png" alt="icon">
+                        <img src="./images/facts/billiard-ball-icon.png" alt="icon" title="">
                         <span>Game Types:</span>
                     </div>
                     <div>Sportsbook, Casino, Live Games, Live Casino</div>
                 </li>
                 <li class="facts__item">
                     <div>
-                        <img src="./images/facts/credit-card-icon.png" alt="icon">
+                        <img src="./images/facts/credit-card-icon.png" alt="icon" title="">
                         <span>Deposit methods:</span>
                     </div>
                     <div>Visa, Masterscard, Maestro, PayPal, Skrill, Neteller, Trustly, Bitcoin, Bank Transfer,
@@ -231,7 +249,7 @@
                 </li>
                 <li class="facts__item">
                     <div>
-                        <img src="./images/facts/lemon-icon.png" alt="icon">
+                        <img src="./images/facts/lemon-icon.png" alt="icon" title="">
                         <span>Withdrawal methods:</span>
                     </div>
                     <div>Visa, Mastercard, Maestro, PayPal, Skrill, Neteller, Trustly, Bitcoin, Bank Transfer, Entropay,
@@ -239,35 +257,35 @@
                 </li>
                 <li class="facts__item">
                     <div>
-                        <img src="./images/facts/dices-icon.png" alt="icon">
+                        <img src="./images/facts/dices-icon.png" alt="icon" title="">
                         <span>Betting functions:</span>
                     </div>
                     <div>Live betting, cash out</div>
                 </li>
                 <li class="facts__item">
                     <div>
-                        <img src="./images/facts/domino-icon.png" alt="icon">
+                        <img src="./images/facts/domino-icon.png" alt="icon" title="">
                         <span>Casino game types:</span>
                     </div>
                     <div>Slots, table games</div>
                 </li>
                 <li class="facts__item">
                     <div>
-                        <img src="./images/facts/croupier-icon.png" alt="icon">
+                        <img src="./images/facts/croupier-icon.png" alt="icon" title="">
                         <span>Casino provider:</span>
                     </div>
                     <div>1X2 Network, Amatic Industries, Apollo Games, Asia Gaming and more</div>
                 </li>
                 <li class="facts__item">
                     <div>
-                        <img src="./images/facts/poker-cards-icon.png" alt="icon">
+                        <img src="./images/facts/poker-cards-icon.png" alt="icon" title="">
                         <span>Apps:</span>
                     </div>
                     <div>iPhone, Android</div>
                 </li>
                 <li class="facts__item">
                     <div>
-                        <img src="./images/facts/glasses-icon.png" alt="icon">
+                        <img src="./images/facts/glasses-icon.png" alt="icon" title="">
                         <span>Founded Year:</span>
                     </div>
                     <div>2017</div>
@@ -277,9 +295,9 @@
 
         <section class="content payment__content">
             <div class="title-wrap payment__title-wrap">
-                <img src="./images/title-marker-left.png" alt="marker">
+                <img src="./images/title-marker-left.png" alt="marker" title="">
                 <h2 class="title payment__title">Deposit and withdrawal options</h2>
-                <img src="./images/title-marker-right.png" alt="marker">
+                <img src="./images/title-marker-right.png" alt="marker" title="">
             </div>
 
             <p class="payment__desc">Online betting allows using different types of payments. With 22BET, you may
@@ -306,9 +324,9 @@
 
         <section class="content faq__content">
             <div class="title-wrap payment__title-wrap">
-                <img src="./images/title-marker-left.png" alt="marker">
+                <img src="./images/title-marker-left.png" alt="marker" title="">
                 <h2 class="title payment__title">FAQ</h2>
-                <img src="./images/title-marker-right.png" alt="marker">
+                <img src="./images/title-marker-right.png" alt="marker" title="">
             </div>
 
             <ul class="faq__list" itemscope itemtype="https://schema.org/FAQPage">
@@ -356,31 +374,31 @@
 
         <ul class="footer__payment">
             <li class="footer__payment-item">
-                <img src="./images/payment/visa.png" alt="visa">
+                <img src="./images/payment/visa.png" alt="visa" title="">
             </li>
             <li class="footer__payment-item">
-                <img src="./images/payment/dinners-discover.png" alt="dinners discover">
+                <img src="./images/payment/dinners-discover.png" alt="dinners discover" title="">
             </li>
             <li class="footer__payment-item">
-                <img src="./images/payment/mastercard.png" alt="mastercard">
+                <img src="./images/payment/mastercard.png" alt="mastercard" title="">
             </li>
             <li class="footer__payment-item">
-                <img src="./images/payment/skrill.png" alt="skrill">
+                <img src="./images/payment/skrill.png" alt="skrill" title="">
             </li>
             <li class="footer__payment-item">
-                <img src="./images/payment/neteller.png" alt="neteller">
+                <img src="./images/payment/neteller.png" alt="neteller" title="">
             </li>
             <li class="footer__payment-item">
-                <img src="./images/payment/ecoPays.png" alt="ecoPays">
+                <img src="./images/payment/ecoPays.png" alt="ecoPays" title="">
             </li>
             <li class="footer__payment-item">
-                <img src="./images/payment/jeton.png" alt="jeton">
+                <img src="./images/payment/jeton.png" alt="jeton" title="">
             </li>
             <li class="footer__payment-item">
-                <img src="./images/payment/interac.png" alt="interac">
+                <img src="./images/payment/interac.png" alt="interac" title="">
             </li>
             <li class="footer__payment-item">
-                <img src="./images/payment/cryptocurrency.png" alt="crypto currency">
+                <img src="./images/payment/cryptocurrency.png" alt="crypto currency" title="">
             </li>
         </ul>
 
@@ -394,7 +412,7 @@
         <p class="footer__desc">Gambling can be addictive. Play responsibly.</p>
 
         <div class="footer__logo">
-            <img src="./images/logo-footer.png" alt="logo">
+            <img src="./images/logo-footer.png" alt="logo" title="">
         </div>
     </footer>
 
